--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body {
     margin: 0;
-    background: #222;
+    background: #111;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +16,7 @@
     color: white;
   }
   canvas {
-    background: #333;
+    background: #222;
     border: 2px solid #666;
     touch-action: none;
   }
@@ -47,15 +47,16 @@
 const canvas = document.getElementById('gameCanvas');
 const ctx = canvas.getContext('2d');
 
-let phase = 'ready'; // ready, pour1, settle, pour2, done
-let tilt = 45; // degrees
-let fill = 0; // 0 to 1
+let phase = 'ready';
+let tilt = 45;
+let fill = 0;
 let score = 0;
 let paused = false;
 let pouring = false;
 let settleTimer = 0;
-let targetSettle = 2000; // ms
+let targetSettle = 2000;
 let lastTime = 0;
+let bubbleOffset = 0; // for cascade effect
 
 // Touch controls
 let lastY = null;
@@ -77,7 +78,7 @@ canvas.addEventListener('touchmove', e => {
   e.preventDefault();
   const y = e.touches[0].clientY;
   if (lastY != null) {
-    tilt += (lastY - y) * 0.2; // adjust tilt
+    tilt += (lastY - y) * 0.2;
     if (tilt < 0) tilt = 0;
     if (tilt > 90) tilt = 90;
   }
@@ -106,30 +107,73 @@ function update(dt) {
     let speed = (1 - tilt/90) * dt * 0.0003;
     fill += speed;
     if (phase === 'pour1' && fill > 0.75) fill = 0.75;
-    if (phase === 'pour2' && fill > 1.05) fill = 1.05; // overflow
+    if (phase === 'pour2' && fill > 1.05) fill = 1.05;
   }
   if (phase === 'settle') {
     settleTimer += dt;
+    bubbleOffset += dt * 0.05;
     if (settleTimer >= targetSettle) phase = 'pour2';
+  }
+}
+
+function drawGlassShape() {
+  ctx.beginPath();
+  ctx.moveTo(-50, -200);
+  ctx.quadraticCurveTo(-40, 0, -20, 200); // left curve
+  ctx.lineTo(20, 200);
+  ctx.quadraticCurveTo(40, 0, 50, -200); // right curve
+  ctx.closePath();
+  ctx.strokeStyle = 'white';
+  ctx.lineWidth = 3;
+  ctx.stroke();
+}
+
+function drawBeer() {
+  const beerColor = '#2d1b10';
+  ctx.fillStyle = beerColor;
+  const beerHeight = 400 * fill;
+  const foamHeight = 15;
+  let slosh = Math.sin(Date.now()/200) * 5 * (tilt/90);
+  
+  ctx.beginPath();
+  ctx.moveTo(-48, 200);
+  ctx.lineTo(-40, 200 - beerHeight);
+  ctx.lineTo(40, 200 - beerHeight + slosh);
+  ctx.lineTo(48, 200);
+  ctx.closePath();
+  ctx.fill();
+
+  // Foam
+  ctx.fillStyle = '#f5f0e1';
+  ctx.beginPath();
+  ctx.moveTo(-40, 200 - beerHeight);
+  ctx.quadraticCurveTo(0, 200 - beerHeight - foamHeight, 40, 200 - beerHeight + slosh);
+  ctx.fill();
+
+  // Cascade bubbles during settle
+  if (phase === 'settle') {
+    ctx.fillStyle = 'rgba(255,255,255,0.2)';
+    for (let i=0; i<20; i++) {
+      let bx = (Math.random()*60)-30;
+      let by = 200 - (Math.random()*beerHeight) + ((bubbleOffset + i*10) % beerHeight);
+      ctx.beginPath();
+      ctx.arc(bx, by, 2, 0, Math.PI*2);
+      ctx.fill();
+    }
   }
 }
 
 function draw() {
   ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.save();
+  ctx.translate(canvas.width/2, canvas.height/2);
+  ctx.rotate((tilt - 45) * Math.PI / 180 * 0.5); // tilt effect
 
-  // Glass
-  ctx.strokeStyle = 'white';
-  ctx.strokeRect(150, 100, 100, 400);
+  drawGlassShape();
+  drawBeer();
 
-  // Beer fill
-  ctx.fillStyle = '#402a1a';
-  ctx.fillRect(150, 500 - 400*fill, 100, 400*fill);
+  ctx.restore();
 
-  // Head
-  ctx.fillStyle = '#f5f0e1';
-  ctx.fillRect(150, 500 - 400*fill - 10, 100, 10);
-
-  // Text
   ctx.fillStyle = 'white';
   ctx.font = '20px sans-serif';
   ctx.fillText(`Tilt: ${tilt.toFixed(0)}°`, 10, 30);
